# port-scanner

./: .gitignore  README.MD  main.py  port-scanner.py  pyproject.toml
helpers/: get_timeout.py  read_data.py
portscanner/: __init__.py  portscan.py
portscanner/helpers/: read_data.py
portscanner/utils/: art.py  colors.py
