[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portscanner"
version = "0.1.0"
description = "Fast multithreaded port scanner"
authors = [{ name = "Seu Nome" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pythonping"
]

[project.scripts]
portscan = "portscanner.portscan:main"

[tool.setuptools]
packages = ["portscanner", "portscanner.helpers", "portscanner.utils"]

[tool.setuptools.package-data]
portscanner = ["data/*.csv"]